[package]
name = "newsletter"
version = "0.1.0"
authors = ["LuísBarroso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-http = "3.0.0-beta.10"
tracing-actix-web = "0.4.0-beta.12"
serde = { version = "1.0.130", features = ["derive"]}
sqlx = { version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.20", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.5"
tracing-log = "0.1.2"
serde-aux = "2.3.0"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8.4", features = ["std_rng"] }
thiserror = "1.0.29"
anyhow = "1.0.43"
base64 = "0.13.0"
argon2 = { version = "0.3", features = ["std"] }

[dev-dependencies]
actix-rt = "2.2.0"
claim = "0.5.0"
once_cell = "1.8.0"
tokio = { version = "1.11.0", features = ["rt", "macros"] }
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.7"
serde_json = "1.0.67"
linkify = "0.7.0"
