[package]
name = "newsletter"
version = "0.1.0"
authors = ["LuísBarroso"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.0-beta.19"
tracing-actix-web = "0.5.0-beta.9"
actix-session = { git = "https://github.com/LukeMathWalker/actix-extras", branch = "rework-actix-session", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.3.0", features = ["cookies"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
serde = { version = "1.0.132", features = ["derive"]}
serde_json = "1.0.74"
serde-aux = "3.0.1"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = "0.4.19"
log = "0.4.14"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11.8", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8.4", features = ["std_rng"] }
thiserror = "1.0.30"
anyhow = "1.0.52"
base64 = "0.13.0"
argon2 = { version = "0.3.2", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
claim = "0.5.0"
once_cell = "1.9.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.8"
serde_json = "1.0.73"
linkify = "0.8.0"
